--- a/index.html
+++ b/index.html
@@ -21,7 +21,40 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
-            
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <div>
+                <div id="heroSection">
+                    <span class="textGray">I'm a</span><br>
+                    MERN Stack developer
+                </div>
+                <div class="lineText">
+                    <hr>
+                    <div class="text">
+                        <p>Empowering Digital Innovation through MERN Stack Expertise. Bringing Creative Ideas to Life with Modern Web Technologies.</p>
+                    </div>
+                </div>
+                
+            </div>
+
+            <br>
+            <br>
+            <div class="connect">
+                <div>
+                    <a href="https://github.com/ArshiyaArora">
+                        <button class="links">Github</button>
+                    </a>
+                    <a href="https://www.linkedin.com/in/arshiya-arora-43ab12259/">
+                        <button class="links">LinkedIn</button>
+                    </a>
+                </div>
+                <div>
+                    <a href="#"><button class="talk">Let's Talk  >></button></a>
+                </div>
+            </div>
         </div>
     </div>
 </body>
