--- a/index.html
+++ b/index.html
@@ -57,5 +57,25 @@
             </div>
         </div>
     </div>
+
+    <!-- ----------------about--------------- -->
+    <div id="about">
+        <div class="container">
+            <div class="row">
+                <div class="about-col-1">
+                    <img src="images/image1.jpeg">
+                </div>
+                <div class="about-col-2">
+                    <h1>About Me</h1>
+                    <p class="aboutMe">Hi, I'm Arshiya—a passionate MERN stack developer with hands-on experience in React, Next.js, and Express.
+                        I also have a strong enthusiasm for machine learning (ML), which fuels my curiosity and drives me to explore new technologies and solutions.
+                        I thrive on solving complex problems and have a keen interest in data structures and algorithms (DSA). <br><br>
+                        When I'm not coding, you'll find me dancing. I've participated in numerous dance events, and it's a joyful way for me to express myself and stay active. Balancing my tech career with my love for dance keeps me inspired and motivated.
+                        <br><br>Feel free to explore my work and reach out if you'd like to collaborate or chat!
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
