--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <nav>
                 <div class="name"><span class="textGray">Arshiya</span> Arora<span class="textGray">.</span></div>
                 <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
             <br>
@@ -29,7 +29,7 @@
             <div>
                 <div id="heroSection">
                     <span class="textGray">I'm a</span><br>
-                    MERN Stack developer
+                    MERN <span class="textGray">Stack</span> developer
                 </div>
                 <div class="lineText">
                     <hr>
@@ -66,7 +66,7 @@
                     <img src="images/image1.jpeg">
                 </div>
                 <div class="about-col-2">
-                    <h1>About Me</h1>
+                    <!-- <h1>About Me</h1><br> -->
                     <p class="aboutMe">Hi, I'm Arshiya—a passionate MERN stack developer with hands-on experience in React, Next.js, and Express.
                         I also have a strong enthusiasm for machine learning (ML), which fuels my curiosity and drives me to explore new technologies and solutions.
                         I thrive on solving complex problems and have a keen interest in data structures and algorithms (DSA). <br><br>
@@ -77,5 +77,46 @@
             </div>
         </div>
     </div>
+
+
+    <!------------------Project------------------>
+    <div id="projects">
+        <div class="container">
+            <h1 class="projectHeading">Discover my latest work</h1><br><br>
+            <div class="projects-row">
+                <div class="project-card">
+                    <span class="projectName">AI Interview Mocker</span><br><br>
+                    <p>
+                        This innovative project leverages the power of the Gemini API to create a personalized interview experience. Built using Next.js, JavaScript, Gemini AI, PostgreSQL, Drizzle, and Clerk, users can generate a custom interview session. During the session, users provide their responses, which are then evaluated. At the end of the interview, a comprehensive review is provided, along with the correct answers, helping users refine their interview skills and boost their confidence.
+                    </p>
+                    <a href="https://github.com/ArshiyaArora/ai-mock-interview-app" target="_blank" class="github-link">View on GitHub</a>
+                </div>
+                <div class="project-card">
+                    <span class="projectName">Video Streaming Platform</span><br><br>
+                    <p>
+                        This project is a dynamic video streaming platform where users can watch, search, and interact with a vast library of videos. Built with React, Firebase, JavaScript (JS), Tailwind CSS, MongoDB, Node.js, and Express, the platform allows users to subscribe or unsubscribe to channels, like, dislike, and comment on videos. It also offers personalized content recommendations, helping users discover related videos that match their interests. With responsive video playback and intuitive user interaction features, this platform provides a comprehensive and engaging streaming experience.
+
+                    </p>
+                    <a href="https://github.com/ArshiyaArora/YT-Clone" target="_blank" class="github-link">View on GitHub</a>
+                </div>
+                <div class="project-card">
+                    <span class="projectName">Bank Website Landing Page</span> <br><br>
+                    <p>
+                        This project features a modern, responsive landing page for a bank, designed with a strong emphasis on UI/UX. Built using React, the landing page provides a seamless and intuitive user experience, with clean design elements, easy navigation, and responsive layouts that adapt to various screen sizes. Whether accessed on desktop or mobile, the website ensures users can effortlessly explore the bank's offerings, making it both functional and visually appealing.
+                    </p>
+                    <a href="https://github.com/ArshiyaArora/bank_modern_app" target="_blank" class="github-link">View on GitHub</a>
+                </div>
+                <div class="project-card">
+                    <span class="projectName">Pet Adoption Website</span> <br><br>
+                    <p>
+                        This project is a user-friendly pet adoption platform that allows users to find their perfect pet. With advanced filtering options, users can search for pets based on location, breed, and type of animal. Built using React, the website leverages React Context API for efficient state management, React Hooks for streamlined component logic, and React Router for seamless navigation. This ensures a smooth and responsive experience, making the adoption process easier for both potential pet owners and adoption agencies.
+                    </p>
+                    <a href="https://github.com/ArshiyaArora/adopt-pet" target="_blank" class="github-link">View on GitHub</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    
 </body>
 </html>
