--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </a>
                 </div>
                 <div>
-                    <a href="#"><button class="talk">Let's Talk  >></button></a>
+                    <a href="#contact"><button class="talk">Let's Talk  >></button></a>
                 </div>
             </div>
         </div>
@@ -117,6 +117,21 @@
         </div>
     </div>
 
+    <!-- --------------Contact------------------------------- -->
+   <div id="contact">
+        <div class="container">
+            <div class="row1">
+                <h1 class="projectHeading"> <span class="textGray">Say Hi!</span> and Connect with Me</h1>
+                <form>
+                    <input type="text" name="Name" placeholder="Your Name" required>
+                    <input type="email" name="Email" placeholder="Your Email" required>
+                    <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                    <button type="submit">Submit</button>
+                 </form>
+                <div class="contact-right"></div>
+            </div>
+        </div>
+   </div>
     
 </body>
 </html>
